[package]
name = "os"
version = "0.1.0"
edition = "2024"

[dependencies]
# 定义了 Sstatus 等复杂的寄存器类型，不用去手动处理位运算。
riscv = "0.10.0"
buddy_system_allocator = "0.6"

# -------------------------------------------------------------------------
# 编译配置：这一部分对写 OS 至关重要！
# -------------------------------------------------------------------------

# 开发模式（ cargo build ）下的配置
[profile.dev]
panic = "abort"    # 当代码发生 panic（崩溃）时，直接终止程序

# 发行模式（ cargo build --release ）下的配置
[profile.release]
panic = "abort"    # 当代码发生 panic（崩溃）时，直接终止程序
